--- a/.github/workflows/ex-caller-workflow-1.yml
+++ b/.github/workflows/ex-caller-workflow-1.yml
@@ -17,19 +17,13 @@ jobs:
   # Call reusable-workflow-1-print-msg from mcummings128/reusable-workflow-github-actions repo.
   call-reusable-workflow-1:
     runs-on: ubuntu-latest
+    name: Call mcummings128/reusable-workflow-1... workflow
+    uses: mcummings128/reusable-workflow-github-actions/.github/workflows/reusable-workflow-1-print-msg.yml
     # ???
     # permissions:
-      # issues: write
-      # pull-requests: write
-      # contents: write # ??? For issue template stuff. See https://docs.github.com/en/rest/issues/issues?apiVersion=2022-11-28#create-an-issue
-    # env:
-      # TEMPLATE_USED: ${{ github.event.schedule }}
-      # GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-    steps:
-      
-      - name: Check out repository
-        uses: actions/checkout@v4
-
-      - name: Call mcummings128/reusable-workflow-1... workflow
-        uses: mcummings128/reusable-workflow-github-actions/.github/workflows/reusable-workflow-1-print-msg.yml@a0ac798420e899465ccf75d80cb6625f106f2726
+        # issues: write
+        # pull-requests: write
+        # contents: write # ??? For issue template stuff. See https://docs.github.com/en/rest/issues/issues?apiVersion=2022-11-28#create-an-issue
+        # env:
+            # TEMPLATE_USED: ${{ github.event.schedule }}
+            # GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
