--- a/.github/workflows/ex-caller-workflow-2.yml
+++ b/.github/workflows/ex-caller-workflow-2.yml
@@ -41,5 +41,5 @@ jobs:
             gh api \
                 -H "Accept: application/vnd.github+json" \
                 -H "X-GitHub-Api-Version: 2022-11-28" \
-                /orgs/ORG/teams/${{ inputs.team_slug }}/members
+                /orgs/org-mushroom-kingdom/teams/${{ inputs.team_slug }}/members
             echo "something"
