--- a/.github/workflows/ex-caller-workflow-2.yml
+++ b/.github/workflows/ex-caller-workflow-2.yml
@@ -43,7 +43,7 @@ jobs:
             mapfile -t team_members < <(gh api -H "Accept: application/vnd.github+json" -H "X-GitHub-Api-Version: 2022-11-28" -H "Authorization: Bearer $TEAMS_READ_TOKEN"  /orgs/org-mushroom-kingdom/teams/${{ inputs.team_slug }}/members | jq -r '.[].login')
             for member in team_members
             do
-                echo $member
+                echo "member = $member"
             done
             # gh api \-H "Accept: application/vnd.github+json" -H "X-GitHub-Api-Version: 2022-11-28" -H "Authorization: Bearer $TEAMS_READ_TOKEN"  /orgs/org-mushroom-kingdom/teams/${{ inputs.team_slug }}/members | jq -r '.[].login')
             # echo "something"
