--- a/.github/workflows/ex-caller-workflow-2.yml
+++ b/.github/workflows/ex-caller-workflow-2.yml
@@ -28,11 +28,9 @@ jobs:
   call-reusable-workflow-2:
     runs-on: ubuntu-latest
     # name: Call mcummings128/reusable-workflow-2... workflow
-    # NOTICE that when you call this manually, it will say the event was workflow_dispatch. Remember the workflow being called (see next line)
-    # is located in another repo, so it might be surprising this isn't workflow_call. This is because (see next line)
+    # TODO: TOKEN STUFF EXPLAIN
     # The 'github' context will always reference the caller workflow's repository (this workflow is the caller workflow, and we call the workflow below (see next line)
-    # manually via workflow_dispatch, which is why you see that as the listed event
-    # uses: mcummings128/reusable-workflow-github-actions/.github/workflows/reusable-workflow-2-teams.yml@a0ac798420e899465ccf75d80cb6625f106f2726
+    # uses: mcummings128/reusable-workflow-github-actions/.github/workflows/reusable-workflow-2-teams.yml@SHA GOES HERE
     # ???
     #   mapfile -t team_names < <(gh api -H "Accept: application/vnd.github+json" -H "X-GitHub-Api-Version: 2022-11-28" -H "Authorization: Bearer $TEAMS_READ_TOKEN" orgs/$ORG/teams | jq -r '.[].slug')
     steps:
