--- a/.github/workflows/ex-caller-workflow-2.yml
+++ b/.github/workflows/ex-caller-workflow-2.yml
@@ -21,27 +21,12 @@ env:
     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     TEAMS_READ_TOKEN: ${{ secrets.TEAMS_READ_ACCESS }}
 
-
-
 jobs:
   # Call reusable-workflow-2-teams from mcummings128/reusable-workflow-github-actions repo.
   call-reusable-workflow-2:
-    runs-on: ubuntu-latest
-    # name: Call mcummings128/reusable-workflow-2... workflow
+    name: Call mcummings128/reusable-workflow-2... workflow
     # TODO: TOKEN STUFF EXPLAIN
-    # The 'github' context will always reference the caller workflow's repository (this workflow is the caller workflow, and we call the workflow below (see next line)
-    # uses: mcummings128/reusable-workflow-github-actions/.github/workflows/reusable-workflow-2-teams.yml@SHA GOES HERE
-    # ???
-    #   mapfile -t team_names < <(gh api -H "Accept: application/vnd.github+json" -H "X-GitHub-Api-Version: 2022-11-28" -H "Authorization: Bearer $TEAMS_READ_TOKEN" orgs/$ORG/teams | jq -r '.[].slug')
-    steps:
-        - name: Echo relevant vars
-          run: echo "team_slug = ${{ inputs.team_slug }}"
-        - name: Get team members
-          run: |
-            mapfile -t team_members < <(gh api -H "Accept: application/vnd.github+json" -H "X-GitHub-Api-Version: 2022-11-28" -H "Authorization: Bearer $TEAMS_READ_TOKEN"  /orgs/org-mushroom-kingdom/teams/${{ inputs.team_slug }}/members | jq -r '.[].login')
-            for member in "${team_members[@]}"
-            do
-                echo "member = $member"
-            done
-            # gh api \-H "Accept: application/vnd.github+json" -H "X-GitHub-Api-Version: 2022-11-28" -H "Authorization: Bearer $TEAMS_READ_TOKEN"  /orgs/org-mushroom-kingdom/teams/${{ inputs.team_slug }}/members | jq -r '.[].login')
-            # echo "something"
+    uses: mcummings128/reusable-workflow-github-actions/.github/workflows/reusable-workflow-2-teams.yml@1da1bc2c3db46c89ce64ef3dfcfb523a58540346
+    with: 
+        team_name: "${{ inputs.team_slug }}"
+        token: "$TEAMS_READ_TOKEN"
