--- a/.github/workflows/ex-caller-workflow-2.yml
+++ b/.github/workflows/ex-caller-workflow-2.yml
@@ -26,7 +26,8 @@ jobs:
   call-reusable-workflow-2:
     name: Call mcummings128/reusable-workflow-2... workflow
     # TODO: TOKEN STUFF EXPLAIN
-    uses: mcummings128/reusable-workflow-github-actions/.github/workflows/reusable-workflow-2-teams.yml@b5d6356cf11ff36562b404cb8c98c4e79ee0911a
+    uses: mcummings128/reusable-workflow-github-actions/.github/workflows/reusable-workflow-2-teams.yml@1baa928aa8ffd84ad367d1a6acd11542f269d63e
+    secrets:
+        teams_read_token: ${{ secrets. TEAMS_READ_ACCESS }}
     with: 
         team_name: "${{ inputs.team_slug }}"
-        token: "$TEAMS_READ_TOKEN"
