--- a/.github/workflows/sc-team-luigi-naming.yml
+++ b/.github/workflows/sc-team-luigi-naming.yml
@@ -39,7 +39,7 @@ jobs:
     steps:
       
       - name: "Manual run: Use fb_name input"
-        if: ${{ github.event == 'workflow_dispatch' }}
+        if: ${{ github.event_name == 'workflow_dispatch' }}
         run: echo "Hello"
       
       - name: Check crap TODO
