--- a/.github/workflows/sc-team-luigi-naming.yml
+++ b/.github/workflows/sc-team-luigi-naming.yml
@@ -40,7 +40,7 @@ jobs:
       
       - name: "Manual run: Use fb_name input"
         if: ${{ github.event_name == 'workflow_dispatch' }}
-        run: echo "SOURCE_BRANCH=${{ inputs.fb_name }}"
+        run: echo "SOURCE_BRANCH=${{ inputs.fb_name }}" >> $GITHUB_ENV
       
       - name: Echo relevant vars
         run: |
