--- a/.github/workflows/sc-team-luigi-naming.yml
+++ b/.github/workflows/sc-team-luigi-naming.yml
@@ -26,10 +26,13 @@ on:
               # This should fail
               - feature/wrong-formatted
 
-# TODO: Probs trash
+
 env:
-  # This token gets passed to the reusable workflow. It has org:read access, needed for the API call in the reusable workflow
-  SOURCE_BRANCH: ${{ github.head_ref }}
+    # This token gets passed to the reusable workflow. It has org:read access, needed for the API call in the reusable workflow
+    SOURCE_BRANCH: ${{ github.head_ref }}
+    GREEN: '\\033[1;32m'
+    RED: '\\033[1;31m'
+    DONE: '\\033[0m' 
 
 jobs:
   # Call reusable-workflow-2-teams from mcummings128/reusable-workflow-github-actions repo.
@@ -51,7 +54,7 @@ jobs:
         run: |
             if [[ "$SOURCE_BRANCH" == "feature/team-luigi"* ]]
             then
-                echo "HOORAY"
+                echo "$GREEN HOORAY $DONE"
             else
-                echo "NAY"
+                echo "$RED NAY $DONE"
             fi
