exit codes and detailed msgs

--- a/.github/workflows/sc-team-luigi-naming.yml
+++ b/.github/workflows/sc-team-luigi-naming.yml
@@ -54,7 +54,9 @@ jobs:
         run: |
             if [[ "$SOURCE_BRANCH" == "feature/team-luigi"* ]]
             then
-                echo -e "$GREEN HOORAY $DONE"
+                echo -e "$GREEN The source branch $SOURCE_BRANCH matches the required naming convention $DONE"
+                exit 0
             else
-                echo -e "$RED NAY $DONE"
+                echo -e "$RED ERROR! The source branch $SOURCE_BRANCH does NOT match the required naming convention $DONE"
+                exit 1
             fi
