--- a/.github/workflows/sc-team-luigi-naming.yml
+++ b/.github/workflows/sc-team-luigi-naming.yml
@@ -52,6 +52,8 @@ jobs:
         
       - name: Assess source branch naming conventions
         run: |
+            # Use the resulting status code to mark the status check as passed (0) or failed (1)
+            # Combining this with the 'Required status checks must pass' will NOT allow the PR to merge if failed
             if [[ "$SOURCE_BRANCH" == "feature/team-luigi"* ]]
             then
                 echo -e "$GREEN Success: The source branch '$SOURCE_BRANCH' matches the required naming convention $DONE"
@@ -60,3 +62,7 @@ jobs:
                 echo -e "$RED ERROR! The source branch '$SOURCE_BRANCH' does NOT match the required naming convention $DONE"
                 exit 1
             fi
+        
+      - name: Post-fail step
+        if: failure()
+        run: echo "FAILED!"
