--- a/.github/workflows/sc-team-luigi-naming.yml
+++ b/.github/workflows/sc-team-luigi-naming.yml
@@ -52,7 +52,7 @@ jobs:
       - name: "Manual run: Use pr_manual and pr_number_manual"
         if: ${{ github.event_name == 'workflow_dispatch' }}
         run: |
-            [[ "github.event.inputs.pr_manual" =~ \d{2} ]] && pr_man_name=${BASH_REMATCH[1]}  
+            [[ "${{github.event.inputs.pr_manual}}" =~ \d{2} ]] && pr_man_name=${BASH_REMATCH[1]}  
             # pr_man_name=$(echo "${{ github.event.inputs.pr_manual }}" | cut -d " " -f 1)
             echo "pr_man_name = ${pr_man_name}"
             # echo "SOURCE_BRANCH=${{ github.event.inputs.pr_manual }}" >> $GITHUB_ENV
