--- a/.github/workflows/sc-team-luigi-naming.yml
+++ b/.github/workflows/sc-team-luigi-naming.yml
@@ -71,9 +71,9 @@ jobs:
       
         - name: Echo relevant vars
           run: |
-            echo "Source branch: $SOURCE_BRANCH"
             echo "PR Number: $PR_NUMBER"
-            # echo "Source branch: $SOURCE_BRANCH"
+            echo "Source branch: $SOURCE_BRANCH"
+            echo "Target branch: $TARGET_BRANCH"
         
         - name: Assess source branch naming conventions
           run: |
