--- a/.github/workflows/sc-team-luigi-naming.yml
+++ b/.github/workflows/sc-team-luigi-naming.yml
@@ -51,7 +51,7 @@ jobs:
 
         - uses: actions/checkout@v4
 
-        # If running manually, override source branch name with input used  
+        # If running manually, override source branch name and PR with input used. Also overwrite target branch  
         - name: "Manual run: Use inputs for spoofed PR fb name, PR num, team-luigi branch name"
           if: ${{ github.event_name == 'workflow_dispatch' }}
           run: |
