--- a/.github/workflows/sc-team-luigi-naming.yml
+++ b/.github/workflows/sc-team-luigi-naming.yml
@@ -16,7 +16,7 @@ on:
   workflow_dispatch:
     inputs:
         pr_manual: 
-            description: "Feature branch name"
+            description: "Feature (source) branch name"
             required: false
             type: choice
             options:
