--- a/.github/workflows/sc-team-luigi-naming.yml
+++ b/.github/workflows/sc-team-luigi-naming.yml
@@ -21,9 +21,9 @@ on:
             type: choice
             options:
                 # TODO: Make these real pull requests then update this comment about those PRs being dummy so manual tests work
-                # This should pass. # TODO: GET ACTUAL PR NUMBER
+                # This should pass. 
                 - feature/team-luigi/refine-some-file (#91)
-                # This should fail # TODO: GET ACTUAL PR NUMBER
+                # This should fail. 
                 - feature/wrong-lui-formatted (#90)
 
 
