--- a/.github/workflows/sc-team-luigi-naming.yml
+++ b/.github/workflows/sc-team-luigi-naming.yml
@@ -20,7 +20,7 @@ on:
             required: false
             type: choice
             options:
-                # TODO: Make these real pull requests then update this comment about those PRs being dummy so manual tests work
+                # Note: These numbers point to real pull requests, so go to that PR in the repo for more information
                 # This should pass. 
                 - feature/team-luigi/refine-some-file (#91)
                 # This should fail. 
