--- a/.github/workflows/sc-team-luigi-naming.yml
+++ b/.github/workflows/sc-team-luigi-naming.yml
@@ -52,9 +52,10 @@ jobs:
         - uses: actions/checkout@v4
 
         # If running manually, override source branch name and PR with input used. Also overwrite target branch  
-        - name: "Manual run: Use inputs for spoofed PR fb name, PR num, team-luigi branch name"
+        - name: "Manual run: Set PR fb/source branch name, PR num, target branch name"
           if: ${{ github.event_name == 'workflow_dispatch' }}
           run: |
+            # Use cut with " " as delimiter and keep the first piece to get the input's source branch name 
             pr_man_src_name=$(echo "${{ github.event.inputs.pr_manual }}" | cut -d " " -f 1)
             echo "Setting env SOURCE_BRANCH to ${pr_man_src_name}"
             echo "SOURCE_BRANCH=$pr_man_src_name" >> $GITHUB_ENV
